--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,18 @@ __pycache__/
 *.so
 test.ipynb
 
+# Image file extensions to ignore
+images/
+
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.ico
+
+
 # Distribution / packaging
 .Python
 build/
