--- a/.github/workflows/main_ai-translations.yml
+++ b/.github/workflows/main_ai-translations.yml
@@ -1,13 +1,10 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - AI-translations
+name: Build and deploy Python app to Azure Web App
 
 on:
   push:
     branches:
       - main
+      - dev
   workflow_dispatch:
 
 jobs:
@@ -46,9 +43,6 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     
     steps:
       - name: Download artifact from build job
@@ -58,12 +52,11 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-
-      
+        
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'AI-translations'
-          slot-name: 'Production'
+          slot-name: ${{ github.ref == 'refs/heads/main' && 'Production' || 'dev' }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D510DDE97FBA49729298B6B8AB1F6F21 }}
