--- a/.github/workflows/main_ai-translations.yml
+++ b/.github/workflows/main_ai-translations.yml
@@ -8,6 +8,7 @@ on:
   push:
     branches:
       - main
+      - dev
   workflow_dispatch:
 
 jobs:
@@ -43,13 +44,19 @@ jobs:
             release.zip
             !venv/
 
+      - name: Set environment variable
+        run: |
+          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
+            echo "ENVIRONMENT=PROD" >> $GITHUB_ENV
+          else
+            echo "ENVIRONMENT=DEV" >> $GITHUB_ENV
+          fi
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+      name: ${{ github.ref == 'refs/heads/main' && 'production' || 'development' }}
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -65,5 +72,5 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'AI-translations'
-          slot-name: 'Production'
+          slot-name: ${{ github.ref == 'refs/heads/main' && 'Production' || 'ai-translations-dev' }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D510DDE97FBA49729298B6B8AB1F6F21 }}
