trying to find out deployment issue

--- a/.github/workflows/dev_ai-translations(dev).yml
+++ b/.github/workflows/dev_ai-translations(dev).yml
@@ -64,6 +64,6 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: 'ai-translations'
+          app-name: 'AI-translations'
           slot-name: 'dev'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_28D3AD84BBCD4D6DB639CB9B836A39FA }}
