--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
       with:
-        login-server: $aitranslation.azurecr.io 
+        login-server: aitranslation.azurecr.io 
         username: AiTranslation 
         password: 5lYJiwLnddzUFrwD9LxNBt/TF4NkVW0pyB74TMXMhe+ACRDCjB8I
 
