--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,3 +1,8 @@
+on:
+  push:
+    branches:
+      - Kubernetes  # Trigger on push to the Kubernetes branch
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
