--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_and_deploy:
-    runs-on: ubuntu-20.04
+    runs-on: Sohails-MBP
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
