--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build_and_deploy:
-    runs-on: Sohails-MBP
+    runs-on: [self-hosted, macOS, X64]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
