Modified the GitHub Actions Workflow to Use the Correct Homebrew Binary

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install Azure CLI
         run: |
           # curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-          brew update
-          brew install azure-cli          
+          arch -arm64 brew update
+          arch -arm64 brew install azure-cli
 
       - name: Login to Azure CLI with Service Principal
         uses: azure/login@v1
