--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Deploy to Azure Kubernetes Service
         run: |
-          az account set --subscription ${{ env.AZURE_SUBSCRIPTION_ID }}
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           az aks get-credentials --resource-group Translator --name AiTranslation
           kubectl apply -f deployment.yaml
           kubectl apply -f service.yaml
