--- a/.github/workflows/ExcelFeature_ai-translations.yml
+++ b/.github/workflows/ExcelFeature_ai-translations.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    runs-on: Ubuntu 20.04
+    runs-on: [self-hosted, macOS, X64]  # Specify labels that match your self-hosted runner
 
     steps:
       - uses: actions/checkout@v4
@@ -44,7 +44,7 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, macOS, X64]  # Specify labels that match your self-hosted runner
     needs: build
     environment:
       name: 'ExcelFeatures'
