--- a/.github/workflows/ExcelFeature_ai-translations.yml
+++ b/.github/workflows/ExcelFeature_ai-translations.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - AI-translations (Excel Features)
 
 on:
@@ -15,22 +11,22 @@ jobs:
     runs-on: [self-hosted, macOS, X64]  # Specify labels that match your self-hosted runner
 
     steps:
-      - uses: actions/checkout@v3  # Updated to the correct version
+      - uses: actions/checkout@v3
 
-      - name: Set up Python version
-        uses: actions/setup-python@v3  # Updated to the correct version
-        with:
-          python-version: '3.8'
+      - name: Install Python
+        run: |
+          brew install python@3.8
+          echo "alias python=python3.8" >> ~/.bash_profile
+          echo "alias pip=pip3" >> ~/.bash_profile
+          source ~/.bash_profile
 
       - name: Create and start virtual environment
         run: |
-          python -m venv venv
+          python3.8 -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
         run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -44,7 +40,7 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: [self-hosted, macOS, X64]  # Specify labels that match your self-hosted runner
+    runs-on: [self-hosted, macOS, X64]
     needs: build
     environment:
       name: 'ExcelFeatures'
