--- a/.github/workflows/ExcelFeature_ai-translations.yml
+++ b/.github/workflows/ExcelFeature_ai-translations.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, macOS, X64]  # Specify labels that match your self-hosted runner
+    runs-on: [self-hosted, macOS, X64]  # Adjust if your runner uses ARM architecture
 
     steps:
       - uses: actions/checkout@v3
 
       - name: Install Python
         run: |
-          brew install python@3.8
+          arch -arm64 brew install python@3.8
           echo "alias python=python3.8" >> ~/.bash_profile
           echo "alias pip=pip3" >> ~/.bash_profile
           source ~/.bash_profile
@@ -40,7 +40,7 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: [self-hosted, macOS, X64]
+    runs-on: [self-hosted, macOS, X64]  # Adjust if your runner uses ARM architecture
     needs: build
     environment:
       name: 'ExcelFeatures'
