--- a/.github/workflows/ExcelFeature_ai-translations.yml
+++ b/.github/workflows/ExcelFeature_ai-translations.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, macOS, X64]  # Adjust if your runner uses ARM architecture
+    runs-on: [self-hosted, macOS, X64]
 
     steps:
       - uses: actions/checkout@v3
@@ -26,9 +26,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python3.8 -m ensurepip
+          source venv/bin/activate
           python3.8 -m pip install --upgrade pip
-          pip install -r requirements.txt
+          python3.8 -m pip install -r requirements.txt
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -42,7 +42,7 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: [self-hosted, macOS, X64]  # Adjust if your runner uses ARM architecture
+    runs-on: [self-hosted, macOS, X64]
     needs: build
     environment:
       name: 'ExcelFeatures'
