--- a/.github/workflows/ExcelFeature_ai-translations.yml
+++ b/.github/workflows/ExcelFeature_ai-translations.yml
@@ -1,3 +1,7 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
+
 name: Build and deploy Python app to Azure Web App - AI-translations (Excel Features)
 
 on:
@@ -8,27 +12,25 @@ on:
 
 jobs:
   build:
-    runs-on: [self-hosted, macOS, X64]
+    runs-on: [self-hosted, Linux, X64, sw-ubuntu-latest]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Install Python
-        run: |
-          arch -arm64 brew install python@3.8
-          echo "export PATH=\"/usr/local/opt/python@3.8/bin:$PATH\"" >> ~/.bash_profile
-          source ~/.bash_profile
+      - name: Set up Python version
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.8'
 
       - name: Create and start virtual environment
         run: |
-          python3.8 -m venv venv
+          python -m venv venv
           source venv/bin/activate
-
+      
       - name: Install dependencies
-        run: |
-          source venv/bin/activate
-          python3.8 -m pip install --upgrade pip
-          python3.8 -m pip install -r requirements.txt
+        run: pip install -r requirements.txt
+        
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -42,12 +44,12 @@ jobs:
             !venv/
 
   deploy:
-    runs-on: [self-hosted, macOS, X64]
+    runs-on: [self-hosted, Linux, X64, sw-ubuntu-latest]
     needs: build
     environment:
       name: 'ExcelFeatures'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
@@ -58,7 +60,7 @@ jobs:
         run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2.0.0  # Example: Specifying a more specific version if compatible
+        uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
           app-name: 'AI-translations'
