--- a/.github/workflows/ExcelFeature_ai-translations.yml
+++ b/.github/workflows/ExcelFeature_ai-translations.yml
@@ -17,10 +17,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check Python version
+      - name: Install Python 3.8
         run: |
+          sudo apt update
+          sudo apt install -y python3.8 python3.8-venv python3.8-dev
+
+      - name: Set PATH and Check Python version
+        run: |
+          echo "PATH=$PATH:/usr/bin/python3.8" >> $GITHUB_ENV
           python3.8 --version
-          which python3.8
 
       - name: Set up Python version
         uses: actions/setup-python@v1
@@ -29,7 +34,7 @@ jobs:
 
       - name: Create and start virtual environment
         run: |
-          python -m venv venv
+          python3.8 -m venv venv
           source venv/bin/activate
       
       - name: Install dependencies
