--- a/.github/workflows/ExcelFeature_ai-translations.yml
+++ b/.github/workflows/ExcelFeature_ai-translations.yml
@@ -17,9 +17,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Add Deadsnakes PPA
+        run: |
+          sudo add-apt-repository ppa:deadsnakes/ppa
+          sudo apt update
+
       - name: Install Python 3.8
         run: |
-          sudo apt update
           sudo apt install -y python3.8 python3.8-venv python3.8-dev
 
       - name: Set PATH and Check Python version
